Fixed spacing at the bottom of the page

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
 
 #page {
   background-color: #eee;
-  margin: 70px auto;
+  margin: 70px auto 30px auto;
   width: 80%;
   -moz-box-shadow: 2px 2px 5px rgba(50,50,50,.5);
   -webkit-box-shadow: 2px 2px 5px rgba(50,50,50,.5);
@@ -82,6 +82,8 @@ body {
 #content {
   margin: 0;
   padding: 40px;
+  padding-bottom: 0;
+  margin-bottom: 16px;
 }
 
 h1 {
@@ -96,6 +98,11 @@ a {
 
 a:hover {
   text-decoration: underline;
+}
+
+#top {
+    margin: 0;
+
 }
 
 #top a {
